# External_Force_ROS_Package

./: .gitignore  README.md
Doc/: Using_GTest
Matlab/: ReadMe.txt  RunAll.m
Matlab/Force_Walk/: Acc.mat  CoM_Pos.mat  ZMP.mat  total_force.mat
Matlab/Force_X_Z_data/: Acc.mat  CoM_Pos.mat  ZMP.mat  total_force.mat
Matlab/Force_Y_data/: Acc.mat  CoM_Pos.mat  ZMP.mat  total_force.mat
Matlab/Force_Z_data/: Acc.mat  CoM_Pos.mat  ZMP.mat  total_force.mat
Matlab/Kalman_Humanoid_Force_Observer/: Force_observer_x.m  Force_observer_y.m  Force_observer_z.m  Kalman_filter_force_observer.m  kalman_filter.m
source/: BUILDPROJECT.sh  CLEANPROJECT.sh
source/src/: .rosinstall  .rosinstall.bak
source/src/force_observer/: CMakeLists.txt  package.xml
source/src/force_observer/config/: ObserverConfig.yaml
source/src/force_observer/include/: General_Filter.h  KalmanForceObserver.h  KalmanForceObserverNode.h  KalmanObserver.h  KalmanObserver_Z.h  Mean_filter.h  Schmitt_trigger.h  ekalman_filter.h  kalman_filt.h  kalman_filter.h
source/src/force_observer/launch/: kalman_force_observer.launch
source/src/force_observer/src/: KalmanForceObserver.cpp  KalmanForceObserverNode.cpp  KalmanObserver_X.cpp  KalmanObserver_Z.cpp  ekalman_filter.cpp  kalman_filt.cpp  kalman_filter.cpp  kalman_force_observer.cpp
source/src/force_observer_msgs/: CMakeLists.txt  package.xml
source/src/force_observer_msgs/msg/: COM.msg  FSR.msg  PelvisPosition.msg
